# src/models/projectModel.js
@@ -1,0 +1,11 @@
+const mongoose = require('mongoose');
+
+const projectSchema = new mongoose.Schema({
+  name: { type: String, required: true },
+  description: String,
+  members: [{ type: mongoose.Schema.Types.ObjectId, ref: 'User' }],
+  tasks: [{ type: mongoose.Schema.Types.ObjectId, ref: 'Task' }],
+  createdBy: { type: mongoose.Schema.Types.ObjectId, ref: 'User' },
+}, { timestamps: true });
+
+module.exports = mongoose.model('Project', projectSchema);
